# LLM_Team

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
app/backend/api/: main.py
app/backend/core/: config.py  generator.py  mcp_tools.py  query_processor.py  rag_graph.py  retriever.py
app/backend/services/: embeddings.py  vector_store.py
app/data_processing/indexing/: index_builder.py
app/data_processing/ingestion/: book_parser.py  text_chunker.py
app/frontend/: streamlit_app.py
docker/: backend.Dockerfile  frontend.Dockerfile
evaluation/: metrics.py  run_eval.py
evaluation/datasets/: validation.json
evaluation/results/: results.json
notebooks/: draft.ipynb
scripts/: ingest.py
